# longevalmem-llmwiki-autoresearch

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT_BUDGET.md  Modelfile.deepseek  README.md  answer_generator.py  compare_prompts.py  db.py  diagnose.py  eval_sample_50.json  ingest.py  llm_client.py  models.py  pyproject.toml  run_eval.py  selection.py  session_formatter.py  synthesis.py  tools.py
.claude/: claude.md
.claude/commands/: search-autoresearch.md
eval/: evaluate_qa.py
eval/longmemeval/: evaluate_qa.py
results/: oracle_predictions.jsonl
wiki/0bb5a684/: index.md  log.md  subjects.json  word_index.json
wiki/0bb5a684/atoms/: answer_e936197f_1_000_00.md  answer_e936197f_1_000_01.md  answer_e936197f_1_000_02.md  answer_e936197f_1_001_00.md  answer_e936197f_1_001_01.md  answer_e936197f_1_001_02.md  answer_e936197f_1_003_00.md  answer_e936197f_1_003_01.md  answer_e936197f_1_004_00.md  answer_e936197f_1_004_01.md  answer_e936197f_2_000_00.md  answer_e936197f_2_000_01.md  answer_e936197f_2_000_02.md  answer_e936197f_2_002_00.md  answer_e936197f_2_005_00.md  answer_e936197f_2_005_01.md  answer_e936197f_2_005_02.md
wiki/_diagnose/: index.md  log.md  subjects.json  word_index.json
wiki/_diagnose/atoms/: answer_1c6b85ea_1_000_00.md  answer_1c6b85ea_1_000_01.md  (+21 more)
wiki/gpt4_2312f94c/: index.md  log.md  subjects.json  word_index.json
wiki/gpt4_2487a7cb/: index.md  log.md  subjects.json  word_index.json
wiki/gpt4_2655b836/: index.md  log.md  subjects.json  word_index.json
wiki/gpt4_76048e76/: index.md  log.md  subjects.json  word_index.json
(+127 files in other folders)
